--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@nexus-switchboard/nexus-mod-opslevel",
   "version": "0.0.2",
+  "keywords": ["nexus-module"],
   "description": "Provides various opslevel integration functionality.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
