--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nexus-switchboard/nexus-conn-confluence": "0.0.3",
+    "@nexus-switchboard/nexus-conn-opslevel": "0.0.2",
+    "@nexus-switchboard/nexus-extend": "^0.4.6",
     "assert": "^2.0.0",
     "debug": "^4.1.1",
-    "ts-confluence-client": "0.0.19",
-    "@nexus-switchboard/nexus-conn-confluence": "^0.0",
-    "@nexus-switchboard/nexus-conn-opslevel": "^0.0",
-    "@nexus-switchboard/nexus-extend": "^0.4"
+    "ts-confluence-client": "0.0.19"
   },
   "devDependencies": {
-    "@types/node": "^12.7.5",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.1",
+    "@types/node": "^12.12.29",
+    "copyfiles": "^2.1.1",
     "express": "~4.16.1",
-    "typescript": "^3.7.5",
+    "tslib": "^1.11.1",
     "tslint": "^6.0.0",
-    "tslib": "^1.10.0",
-    "copyfiles": "^2.1.1"
+    "typescript": "^3.8.3"
   }
 }
